test/invalid/fc36956_MethodNotOverrideAlsoInSuperClass/ToalhaDeMesa.plume
/**
 * ToalhaDeMesa.plume
 *
 * Test: if a method is not qualified with keyword override, 
 * there cannot be a method with the same name in a super class
 *
 * @author Carlos Mao de Ferro
 * @version $Id: ToalhaDeMesa.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class ToalhaDeMesa extends Toalha is

	method temNodoas : (estaSuja : Boolean) -> Boolean is
		if estaSuja
		then true
		else false